# multifurcation

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  TODO.md  academic_8hpp_source.html  author_8hpp_source.html  classfield-members.html  classfield.html  conceptmeasurable.html  conceptnotable.html  conceptreal.html  conceptrootable.html  dir_0c48b70bb1aedd5494dceb5d0e0f472a.html  dir_25ccb1b17835c62408f46ed89d7fccbd.html  dir_2887dcb0f547fbb5ccb19d4cbb873e95.html  dir_3b0bf7352481303614b76e64febc9389.html  dir_4a0c9d76b26cc8afce35f4ec8c39654a.html  dir_4ea6706e78717705679b7469bd660116.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68f3ea63a720998ea0a4b662391e87f2.html  dir_69d87adddf94478d1b4251d2bcc2dc83.html  dir_75dde9d9deb055c60e7e586ace792583.html  dir_85e1ec50574163a848840382e0a93c58.html  dir_c01fc202139f6d17961d87b7506130a8.html  dir_cac8729e6621db8c3909571d6429e822.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dafb92b3f7441c0407c41f91e4a0a946.html  dir_e82de520d5aa29058eacaaa5bcf3354d.html  files.html  globals.html  globals_func.html  innovator_8hpp_source.html  (+20 more)
.github/workflows/: cmake.yml
api/: multifurcation.py
app/: CMakeLists.txt  app.cpp
conventions/: README.md  format.hpp
doc/html/: annotated.html  class_contour.html  class_f_a_l_l_b_a_c_k-members.html  class_f_a_l_l_b_a_c_k.html  class_gnu_builder.html  class_plot_builder.html  classes.html  classfeature-members.html  classfeature.html  classfield-members.html  classfield.html  classsimulation-members.html  classsimulation.html  classvisualisation.html  conceptfeaturable.html  conceptnotable.html  concepts.html  dir_01e89e0807e1b22b4825f5adfb8b0414.html  dir_1b4e31eba254ee032eede982124d1718.html  dir_1bd8a54ca38c9348112713867b9563e0.html  dir_2440bd12a3d49ad1cdf6b275f3e6361d.html  dir_39a4c3f839f169aaf68f9f94ddf55299.html  dir_4198f1120507ec559c21c982329e9eb8.html  dir_4f807bd524bc0946ab32a5d3d12880b1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68c4ba4d3807abdc6f84b772480e456a.html  dir_70843e45291ce9c7023a72242b8b819d.html  dir_7915d9bfabe898c1da60b507818f5ac9.html  dir_81a1ba722c5581d7feaf5d4280dcbbdb.html  dir_81f7e01c9f1db45610981a86fe5f99b0.html  dir_8fd11e8da1f451bda48d2890a390d137.html  dir_96872142cb6b0773e4108633a5041c67.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a826d53077faa4bc072ec5ae357ef274.html  dir_a8817977030a9248f86e71c57d011448.html  dir_ac7a2a030a83d702e5877ff871a7ddc0.html  dir_bacd9b624ccb0bd7fba9adf0146f93f2.html  dir_c48e484d430dcad17ece98cd362b3086.html  dir_cc13db568604976f7eaa2c8b5a0ce0b6.html  dir_daa4d96331bbe445fa8c2d0408f09910.html  (+27 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  searchdata.js  typedefs_1.js
doc/latex/: academic_8hpp_source.tex  annotated.tex  author_8hpp_source.tex  class_contour.tex  class_f_a_l_l_b_a_c_k.tex  class_gnu_builder.eps  class_gnu_builder.tex  class_plot_builder.eps  class_plot_builder.tex  classfeature.tex  classfield.eps  classfield.tex  classsimulation.tex  classvisualisation.tex  conceptfeaturable.tex  conceptmeasurable.tex  conceptnotable.tex  conceptreal.tex  conceptrootable.tex  concepts.tex  files.tex  hierarchy.tex  innovator_8hpp_source.tex  inventor_8hpp_source.tex  md__c_h_a_n_g_e_l_o_g.tex  md__c_o_d_e___o_f___c_o_n_d_u_c_t.tex  md__r_e_a_d_m_e.tex  md__t_o_d_o.tex  multifurcation_8cpp.tex  multifurcation_8hpp.tex  multifurcation_8hpp_source.tex  mwe_2multifurcation_8cpp.tex  refman.tex  src_2multifurcation_8cpp.tex  struct_area_feature.tex  struct_line_feature.tex  struct_point_feature.tex  struct_volume_feature.tex  structlocation.tex  tool_8hpp_source.tex  (+2 more)
include/multifurcation/: multifurcation.hpp  version.hpp
lib/innovation/: CMakeLists.txt
lib/innovation/include/innovation/: innovation.hpp
lib/innovation/src/: innovation.cpp
lib/innovation/test/: CMakeLists.txt  innovation_test.cpp
lib/innovator/: CMakeLists.txt  README.md
lib/innovator/include/innovator/: innovator.hpp
lib/innovator/src/: innovator.cpp
lib/innovator/test/: CMakeLists.txt  innovator_test.cpp
lib/inventor/: CMakeLists.txt  README.md
lib/inventor/include/inventor/: inventor.hpp
lib/inventor/src/: inventor.cpp
lib/inventor/test/: CMakeLists.txt  inventor_test.cpp
mwe/: .gitignore  CMakeLists.txt  README.md  multifurcation.cpp  multifurcation.sh
mwe/app/: CMakeLists.txt  app.cpp
mwe/include/mwe/: location.hpp  mwe.hpp
mwe/multifurcation/: CMakeLists.txt  multifurcation.cpp
mwe/scripts/: mwe.sh
mwe/src/: CMakeLists.txt  location.cpp  mwe.cpp
mwe/test/: CMakeLists.txt  mwe_test.cpp
scripts/: build.sh
scripts/comment/: .gitignore  add_header.rb
scripts/containerisation/: docker.sh
scripts/documentation/: github-pages.sh
search/: all_0.js  all_1.js  all_4.js  all_7.js  classes_1.js  classes_3.js  classes_5.js  concepts_0.js  concepts_1.js  concepts_2.js  files_0.js  functions_0.js  pages_2.js  searchdata.js  typedefs_1.js
src/: multifurcation.cpp
test/: CMakeLists.txt  multifurcation_test.cpp
tools/academic/: CMakeLists.txt  README.md
tools/academic/include/academic/: academic.hpp
tools/academic/src/: academic.cpp
tools/academic/test/: CMakeLists.txt  academic_test.cpp
tools/tool/: CMakeLists.txt  README.md
tools/tool/include/tool/: tool.hpp
tools/tool/src/: tool.cpp
tools/tool/test/: CMakeLists.txt  tool_test.cpp
utilities/author/: CMakeLists.txt
utilities/author/include/author/: author.hpp
utilities/author/src/: author.cpp
utilities/author/test/: author_test.cpp
utilities/utl/: CMakeLists.txt  README.md
utilities/utl/include/utl/: utl.hpp
utilities/utl/src/: utl.cpp
utilities/utl/test/: CMakeLists.txt  utl_test.cpp
