cmake_minimum_required ( VERSION 3.14..3.25 )

set (
    CMAKE_CXX_STANDARD
    20
)

file (
    READ
    ${CMAKE_CURRENT_LIST_DIR}/multifurcation.cpp
    MULTIFURCATION_SOURCE_FILE
)

string (
    REGEX MATCH
    "#define MULTIFURCATION_VERSION_MAJOR ([0-9]*)"
    _MULTIFURCATION_VERSION_MAJOR
    ${MULTIFURCATION_SOURCE_FILE}
)

set( MULTIFURCATION_VERSION_MAJOR ${CMAKE_MATCH_1} )

string (
    REGEX MATCH
    "#define MULTIFURCATION_VERSION_MINOR ([0-9]*)"
    _MULTIFURCATION_VERSION_MINOR
    ${MULTIFURCATION_SOURCE_FILE}
)

set( MULTIFURCATION_VERSION_MINOR ${CMAKE_MATCH_1} )

string (
    REGEX MATCH
    "#define MULTIFURCATION_VERSION_PATCH ([0-9]*)"
    _MULTIFURCATION_VERSION_PATCH
    ${MULTIFURCATION_SOURCE_FILE}
)

set( MULTIFURCATION_VERSION_PATCH ${CMAKE_MATCH_1} )

project (
    multifurcation
    VERSION
        "${MULTIFURCATION_VERSION_MAJOR}.${MULTIFURCATION_VERSION_MINOR}.${MULTIFURCATION_VERSION_PATCH}"
    LANGUAGES
        C CXX
)

message (
    STATUS
    "MULTIFURCATION ${PROJECT_VERSION}"
)

add_executable ( multifurcation multifurcation.cpp )